--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,22 @@
 services:
-  backend:
-    build:
-      context: .
-      dockerfile: ./file-server/Dockerfile
-    ports:
-      - "8800:8000"
+    db:
+        image: mysql:9.1.0
+        healthcheck:
+            interval: 5s
+            timeout: 5s
+            retries: 5
+            start_period: 5s
+        environment:
+            MYSQL_ROOT_PASWOR: "user"
+            MYSQL_ROOT_PASWORD: "root"
+        volumes:
+            - ./data:/var/lib/mysql
+    backend:
+        build:
+            context: .
+            dockerfile: ./file-server/Dockerfile
+        ports:
+            - "8800:8000"
+        depends_on:
+            db:
+                conditions: service_healthy
