--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ name: "Bucket"
 services:
     db:
         platform: linux/amd64
-        image: mysql:9.1.0
+        image: mariadb:latest
         healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+            test: [ "CMD", "healthcheck.sh", "--su-mysql", "--connect", "--innodb_initialized" ]
             interval: 5s
             timeout: 5s
             retries: 5
