--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
             MYSQL_DATABASE: "Bucket"
         volumes:
             - ./data:/var/lib/mysql
+            - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
     backend:
         build:
