--- a/file-server/Dockerfile
+++ b/file-server/Dockerfile
@@ -2,9 +2,13 @@ FROM node:23
 
 WORKDIR /app
 
-COPY ./file-server .
+COPY ./file-server/package*.json /
+
 
 RUN npm install
+
 RUN npm install nodemon -g
+
+COPY ./file-server .
 
 CMD ["nodemon"]
