--- a/file-server/package.json
+++ b/file-server/package.json
@@ -7,7 +7,11 @@
         "start": "nodemon"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
+        "dotenv": "^16.4.5",
         "express": "^4.17.1",
-        "mysql": "^2.18.1"
+        "jsonwebtoken": "^9.0.2",
+        "mysql": "^2.18.1",
+        "mysql2": "^3.11.3"
     }
 }
