--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DATABASE_USER=user
 DATABASE_PASSWORD=password
 DATABASE_NAME=file_db
 DATABASE_PASSWORD_ROOT=root
-JWT_SECRET=
+JWT_SECRET=au6tshTlSJ/wnxyIVHYgcE9bdw2ANGRYdOb7cA6au98=
 PORT=5000
