--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,39 @@
 name: "bucket"
 services:
-  db:
-    platform: linux/amd64
-    image: mariadb:11
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "healthcheck.sh",
-          "--su-mysql",
-          "--connect",
-          "--innodb_initialized",
-        ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-      start_period: 5s
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD_ROOT}
-      MYSQL_USER: ${DATABASE_USER}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-      MYSQL_DATABASE: ${DATABASE_NAME}
-    volumes:
-      - ./data:/var/lib/mysql
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-
-  backend:
-    build:
-      context: .
-      dockerfile: ./file-server/Dockerfile
-    ports:
-      - "8800:5000"
-    depends_on:
-      db:
-        condition: service_healthy
+    db:
+        platform: linux/amd64
+        image: mariadb:11
+        healthcheck:
+            test:
+                [
+                    "CMD",
+                    "healthcheck.sh",
+                    "--su-mysql",
+                    "--connect",
+                    "--innodb_initialized",
+                ]
+            interval: 5s
+            timeout: 5s
+            retries: 5
+            start_period: 5s
+        environment:
+            MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD_ROOT}
+            MYSQL_USER: ${DATABASE_USER}
+            MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+            MYSQL_DATABASE: ${DATABASE_NAME}
+        volumes:
+            - ./data:/var/lib/mysql
+            - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+        env_file:
+            - .env
+    backend:
+        build:
+            context: .
+            dockerfile: ./file-server/Dockerfile
+        ports:
+            - "8800:${PORT}"
+        depends_on:
+            db:
+                condition: service_healthy
+        env_file:
+            - .env
