--- a/file-server/package.json
+++ b/file-server/package.json
@@ -12,6 +12,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^9.0.2",
         "mysql": "^2.18.1",
-        "mysql2": "^3.11.3"
+        "mysql2": "^3.11.3",
+        "nodemon": "^3.1.7"
     }
 }
