--- a/file-server/package.json
+++ b/file-server/package.json
@@ -10,10 +10,12 @@
         "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
         "express": "^4.17.1",
+        "fs": "^0.0.1-security",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "mysql": "^2.18.1",
         "mysql2": "^3.11.3",
-        "nodemon": "^3.1.7"
+        "nodemon": "^3.1.7",
+        "path": "^0.12.7"
     }
 }
